[tool.poetry]
name = "zyro"
version = "0.0.1"
description = "An automation tool that makes APIs and deployment faster."
authors = ["M. Sanjay Uddith Raju <uddithmachiraju@gmail.com>"]
# packages = [
#   { include = "zyro", from = "src" }
# ]

[tool.poetry.scripts]
zyro = "zyro.cli.main:main"

[tool.poetry.dependencies]
python = "^3.12"

# runtime dependencies your CLI actually uses
typer = "^0.20.0"
PyYAML = "^6.0.3"
fastapi = "^0.121.0"
uvicorn = "^0.38.0"
pydantic = "^2.12.3"
pydantic-settings = "^2.11.0"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
# development & build tools (not required at runtime)
build = "^1.3.0"
pytest = "^8.4.2"
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^7.0.0"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
exclude = ["venv*", "tests*", "docs*"]

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
  )/
)
'''
preview = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
pretty = true
exclude = ["venv", "build", "dist"]
